United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6893504 LinkageError not thrown for duplicate class definition for bootstrap class loader
6893504 : LinkageError not thrown for duplicate class definition for bootstrap class loader

Details
Type:
Bug
Submit Date:
2009-10-20
Status:
Closed
Updated Date:
2012-10-08
Project Name:
JDK
Resolved Date:
2010-01-14
Component:
hotspot
OS:
generic
Sub-Component:
runtime
CPU:
generic
Priority:
P4
Resolution:
Fixed
Affected Versions:
hs17
Fixed Versions:
6u21

Related Reports
Backport:
Backport:

Sub Tasks

Description
LinkageError not thrown for duplicate calls to JNI_DefineClass for boot strap class loader.

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot/hotspot/rev/a75edfd400ea
                                     
2009-11-30
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-rt/hotspot/rev/a75edfd400ea
                                     
2009-11-24
EVALUATION

Needs to be fixed.
                                     
2009-10-28



Hardware and Software, Engineered to Work Together