6893504: LinkageError for bootstrap duplicate class definitions

Reviewed-by: kamg, xlu